--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
-    "@hotwired/turbo-rails": "^7.1.0",
+    "@hotwired/turbo-rails": "^7.1.1",
     "bulma": "^0.9.3",
-    "esbuild": "^0.14.11",
+    "bulma-extensions": "^6.2.7",
+    "esbuild": "^0.14.17",
     "esbuild-plugin-import-glob": "^0.1.1",
     "esbuild-rails": "^1.0.3",
-    "sass": "^1.47.0"
+    "sass": "^1.49.7"
   },
   "scripts": {
     "build": "node esbuild.config.js",
