--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@hotwired/turbo-rails": "^7.1.1",
     "bulma": "^0.9.3",
     "bulma-extensions": "^6.2.7",
+    "chart.js": "^3.7.0",
+    "chartkick": "^4.1.1",
     "esbuild": "^0.14.20",
     "esbuild-plugin-import-glob": "^0.1.1",
     "esbuild-rails": "^1.0.3",
+    "jquery": "^3.6.0",
     "sass": "^1.49.7"
   },
   "scripts": {
