--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "bulma": "^0.9.3",
+    "bulma-carousel": "^4.0.24",
     "bulma-extensions": "^6.2.7",
-    "chart.js": "^3.7.0",
+    "chart.js": "^3.7.1",
     "chartkick": "^4.1.1",
-    "esbuild": "^0.14.20",
+    "esbuild": "^0.14.23",
     "esbuild-plugin-import-glob": "^0.1.1",
     "esbuild-rails": "^1.0.3",
     "jquery": "^3.6.0",
-    "sass": "^1.49.7"
+    "sass": "^1.49.8"
   },
   "scripts": {
     "build": "node esbuild.config.js",
