--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^8.0.21",
     "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
+    "bun": "^1.3.6",
     "chart.js": "^4.4.4",
     "chartkick": "^5.0.1",
     "esbuild": "^0.27.2",
