--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^8.0.21",
-    "bulma": "^0.9.4",
+    "@hotwired/turbo-rails": "^8.0.20",
+    "@rails/actioncable": "^8.1.100",
+    "@rails/activestorage": "^8.1.100",
+    "@rails/request.js": "^0.0.12",
+    "autoprefixer": "^10.4.21",
+    "bulma": "1.0.4",
     "bulma-extensions": "^6.2.7",
-    "bun": "^1.3.6",
-    "chart.js": "^4.4.4",
-    "chartkick": "^5.0.1",
-    "esbuild": "^0.27.2",
+    "esbuild": "^0.25.11",
     "esbuild-plugin-import-glob": "^0.1.1",
     "esbuild-rails": "^1.0.7",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^13.0.2",
     "jquery": "^4.0.0",
-    "sass": "^1.97.3"
+    "sass": "^1.93.3"
+
   },
   "scripts": {
     "build": "node esbuild.config.js",
