--- a/package.json
+++ b/package.json
@@ -3,22 +3,16 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^8.0.20",
-    "@rails/actioncable": "^8.1.100",
-    "@rails/activestorage": "^8.1.100",
-    "@rails/request.js": "^0.0.12",
-    "autoprefixer": "^10.4.21",
-    "bulma": "1.0.4",
+    "@hotwired/turbo-rails": "^8.0.10",
+    "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
-    "esbuild": "^0.25.11",
+    "chart.js": "^4.4.4",
+    "chartkick": "^5.0.1",
+    "esbuild": "^0.24.0",
     "esbuild-plugin-import-glob": "^0.1.1",
     "esbuild-rails": "^1.0.7",
-    "postcss-cli": "^11.0.1",
-    "postcss-import": "^16.1.1",
-    "postcss-nesting": "^13.0.2",
-    "jquery": "^4.0.0",
-    "sass": "^1.93.3"
-
+    "jquery": "^3.7.1",
+    "sass": "^1.79.5"
   },
   "scripts": {
     "build": "node esbuild.config.js",
