--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -8,7 +8,7 @@ development:
     bot:
       token: <%= ENV["BOT_TOKEN"] %>
       username: <%= ENV["BOT_NAME"] %>
-#      server: http://local.bot.api.server
+      server: http://local.bot.api.server
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
